# ComfyUI_PerformanceTracker

./: .comfyignore  .gitignore  README.md  __init__.py  pyproject.toml
.github/workflows/: publish.yml
js/: performance_tracker.js
performance_tracker/: __init__.py  database.py  extractor.py  hooks.py  routes.py
