[project]
name = "comfyui-performance-tracker"
description = "Local generation performance history and model timing dashboard for ComfyUI."
version = "0.1.0"
license = { file = "LICENSE" }
readme = "README.md"
requires-python = ">=3.10"
dependencies = []

[project.urls]
Repository = "https://github.com/JonMichaelSales/ComfyUI_PerformanceTracker"
Issues = "https://github.com/JonMichaelSales/ComfyUI_PerformanceTracker/issues"

[tool.comfy]
PublisherId = "jonmsales"
DisplayName = "ComfyUI Performance Tracker"
Icon = ""


